--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   },
   "scripts": {
     "start": "nodemon server.js"
-  }
+  },
+  "devDependencies": {},
+  "author": "",
+  "description": ""
 }
