--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "socket.io": "^2.3.0"
   },
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js"
   },
   "devDependencies": {},
   "author": "",
