--- a/package.json
+++ b/package.json
@@ -4,9 +4,17 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "admin-bro": "^2.9.0",
+    "admin-bro-expressjs": "^2.1.1",
+    "admin-bro-mongoose": "^0.5.2",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-formidable": "^1.2.0",
+    "express-session": "^1.17.1",
+    "mongoose": "^5.9.28",
     "nodemon": "^2.0.4",
+    "pretty-bytes": "^5.3.0",
     "socket.io": "^2.3.0"
   },
   "scripts": {
