admin panel added and other stuff

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "socket.io": "^2.3.0"
   },
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js"
   },
   "devDependencies": {},
   "author": "",
